Change configuration to run on aws

--- a/Configuration.yaml
+++ b/Configuration.yaml
@@ -7,16 +7,16 @@
 # The local node’s name is included in this list
 configuration :
 - name : alice
-  ip   : 127.0.0.1
+  ip   : ec2-52-91-211-230.compute-1.amazonaws.com
   port : 12344
 - name : bob
-  ip   : 127.0.0.1
+  ip   : ec2-52-91-211-230.compute-1.amazonaws.com
   port : 14255
 - name : charlie
-  ip   : 128.2.130.19
+  ip   : ec2-54-152-89-119.compute-1.amazonaws.com
   port : 12998
 - name : daphnie
-  ip   : 192.168.1.87
+  ip   : ec2-54-152-89-119.compute-1.amazonaws.com
   port : 1987
 # This is the incoming port on which MP will listen
 # May be changed for further communication as usual
